Complete milestone 2D framework